# PANACEA

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: check-formatting.yml  main.yml
cmake/: InstallCatch2.cmake  InstallEigen.cmake  PanaceaConfig.cmake  PanaceaInstall.cmake  PythonModuleCheck.cmake  panaceaConfig.cmake
examples/example1/: CMakeLists.txt  README.md
examples/example1/src/: example1.cpp
include/panacea/: CMakeLists.txt  base_descriptor_wrapper.hpp  entropy_term.hpp  file_io.hpp  file_io_types.hpp  matrix.hpp  panacea.hpp  passkey.hpp  settings.hpp  vector.hpp
jupyter_notebooks/: README.md
jupyter_notebooks/Covariance/: Covariance.ipynb  TrivialCovar.ipynb  UpdatingCovar.ipynb
jupyter_notebooks/RowEchelon/: RowEchelon.ipynb
src/libpanacea/: constants.hpp  data_point_template.cpp  data_point_template.hpp  data_settings.cpp  data_settings.hpp  error.hpp  mean.hpp  median.hpp  memory.hpp  numerical_engine.hpp  optimizer.cpp  panacea.cpp  passkey.hpp  private_settings.hpp  settings.cpp  settings.hpp  type_map.cpp  type_map.hpp  type_register.hpp  variance.hpp
src/libpanacea/attribute_manipulators/: README.md  dimension_limiter.cpp  dimension_limiter.hpp  inverter.cpp  inverter.hpp  normalizer.cpp  normalizer.hpp  randomizer.cpp  randomizer.hpp  reducer.cpp  reducer.hpp  row_echelon.cpp  row_echelon.hpp
src/libpanacea/attributes/: :w  covariance.cpp  covariance.hpp  dimensions.cpp  dimensions.hpp  reduced_covariance.cpp  reduced_covariance.hpp  reduced_inv_covariance.cpp  reduced_inv_covariance.hpp
src/libpanacea/attributes/covariance/: covariance_correlated.cpp  covariance_correlated.hpp  covariance_functions.cpp  covariance_functions.hpp  covariance_uncorrelated.cpp  covariance_uncorrelated.hpp
src/libpanacea/descriptors/: README.md  base_descriptor_wrapper.cpp  base_descriptor_wrapper.hpp  descriptor_wrapper.hpp
src/libpanacea/distribution/: README.md  distribution.cpp  distribution.hpp  distribution_factory.cpp  distribution_factory.hpp
src/libpanacea/distribution/distribution_settings/: distribution_settings.cpp  distribution_settings.hpp  kernel_distribution_settings.cpp  kernel_distribution_settings.hpp
src/libpanacea/distribution/distributions/: distribution.cpp  distribution.hpp  histogram_distribution.hpp  kernel_distribution.cpp  kernel_distribution.hpp
src/libpanacea/distribution/distributions/kernel_distribution/: kernel_distribution_gradiant.cpp  kernel_distribution_gradiant.hpp
src/libpanacea/entropy/: entropy_factory.cpp  entropy_factory.hpp
src/libpanacea/entropy/entropy_settings/: entropy_settings.cpp  entropy_settings.hpp
src/libpanacea/entropy/entropy_terms/: cross_entropy.cpp  cross_entropy.hpp  entropy_term.cpp  entropy_term.hpp  entropy_term_common.cpp  entropy_term_common.hpp  self_entropy.cpp  self_entropy.hpp
src/libpanacea/entropy/entropy_terms/entropy_decorators/: entropy_decorator.cpp  entropy_decorator.hpp  numerical_grad.cpp  numerical_grad.hpp  scale.hpp  weight.cpp  weight.hpp
src/libpanacea/io/: README.md  file_io.cpp  file_io.hpp  file_io_factory.cpp  file_io_factory.hpp  file_txt_descriptor.cpp  file_txt_descriptor.hpp  file_txt_kerneldistribution.cpp  file_txt_kerneldistribution.hpp  file_txt_restart.cpp  file_txt_restart.hpp  io_common.hpp
src/libpanacea/kernels/: README.md  base_kernel_wrapper.cpp  base_kernel_wrapper.hpp  kernel_specifications.cpp  kernel_specifications.hpp  kernel_wrapper.hpp  kernel_wrapper_factory.cpp  kernel_wrapper_factory.hpp  mean_kernel_wrapper.cpp  mean_kernel_wrapper.hpp  median_kernel_wrapper.cpp  median_kernel_wrapper.hpp
src/libpanacea/matrix/: README  matrix.cpp  matrix.hpp  matrix_eigen.cpp  matrix_eigen.hpp
src/libpanacea/normalization_methods/: '  normalization_method_base.cpp  normalization_method_base.hpp  normalization_method_factory.cpp  normalization_method_factory.hpp  normalization_method_none.cpp  normalization_method_none.hpp  normalization_method_variance.cpp  normalization_method_variance.hpp
src/libpanacea/primitives/: README.md  gaussian_correlated.cpp  gaussian_correlated.hpp  gaussian_log_correlated.cpp  gaussian_log_correlated.hpp  gaussian_uncorrelated.cpp  gaussian_uncorrelated.hpp  primitive.cpp  primitive.hpp  primitive_attributes.cpp  primitive_attributes.hpp  primitive_factory.cpp  primitive_factory.hpp  primitive_group.cpp  primitive_group.hpp
src/libpanacea/tasks/: initializer.cpp  updater.cpp
src/libpanacea/vector/: vector.cpp  vector.hpp  vector_eigen.cpp  vector_eigen.hpp
tst/: CMakeLists.txt
tst/helper/: CMakeLists.txt  README.md  helper.cpp  helper.hpp
tst/integration/: test_covariance.cpp  test_cross_entropy.cpp  test_descriptor_wrappers.cpp  test_dimension_limiter.cpp  test_distributions.cpp  test_inverter.cpp  test_kernel_specifications.cpp  test_kernel_wrappers.cpp  test_normalizer.cpp  test_primitive_factory.cpp  test_primitive_group.cpp  test_randomizer.cpp  test_reducer.cpp  test_self_entropy.cpp
tst/public_integration/: test_cross_entropy.cpp  test_descriptor_wrapper.cpp  test_panacea.cpp  test_self_and_cross_entropy.cpp  test_self_entropy.cpp
tst/unit/: CMakeLists.txt  test_covariance.cpp  test_cross_entropy.cpp  test_data_point_template.cpp  test_descriptor_wrappers.cpp  test_dimension_limiter.cpp  test_dimensions.cpp  test_distributions.cpp  test_entropy_settings.cpp  test_gaussian_correlated.cpp  test_gaussian_uncorrelated.cpp  test_inverter.cpp  test_kernel_specifications.cpp  test_kernel_wrappers.cpp  test_matrix.cpp  test_mean.cpp  test_median.cpp  test_memory_manager.cpp  test_normalization_methods.cpp  test_normalization_methods.hpp  test_normalizer.cpp  test_primitive_factory.cpp  test_primitive_group.cpp  test_randomizer.cpp  test_reducer.cpp  test_row_echelon.cpp  test_self_entropy.cpp  test_settings.cpp  test_variance.cpp
